--- a/templates/weinberg_angle.cpp.in
+++ b/templates/weinberg_angle.cpp.in
@@ -150,33 +150,18 @@ std::pair<double,double> CLASSNAME::calculate(double sinThetaW_start)
    double sinThetaW_new = sinThetaW_start;
 
    while (not_converged && iteration < number_of_iterations) {
-      double deltaRhoHat = calculate_delta_rho_hat(sinThetaW_old);
+      const double deltaRhoHat = calculate_delta_rho_hat(sinThetaW_old);
 
-      if (!std::isfinite(deltaRhoHat)) {
-#if defined(ENABLE_VERBOSE) || defined(ENABLE_DEBUG)
-         WARNING("delta_rho non-finite");
-#endif
-         deltaRhoHat = 0.;
-      }
+      if (!std::isfinite(deltaRhoHat) || deltaRhoHat >= 1.0)
+         throw NonPerturbativeSinThetaW();
 
       const double rhohat_ratio = Abs(deltaRhoHat) < 1.0 ?
          1.0 / (1.0 - deltaRhoHat) : 1.0;
 
-      double deltaRHat = calculate_delta_r_hat(rhohat_ratio, sinThetaW_old);
+      const double deltaRHat = calculate_delta_r_hat(rhohat_ratio, sinThetaW_old);
 
-      if (deltaRHat > 1.) {
-#if defined(ENABLE_VERBOSE) || defined(ENABLE_DEBUG)
-         WARNING("delta_r_hat > 1");
-#endif
-         deltaRHat = 0.;
-      }
-
-      if (!std::isfinite(deltaRHat)) {
-#if defined(ENABLE_VERBOSE) || defined(ENABLE_DEBUG)
-         WARNING("delta_r_hat non-finite");
-#endif
-         deltaRHat = 0.;
-      }
+      if (!std::isfinite(deltaRHat) || deltaRHat >= 1.0)
+         throw NonPerturbativeSinThetaW();
 
       double sin2thetasqO4 = Pi * alphaDRbar /
          (ROOT2 * Sqr(mz) * gfermi * (1.0 - deltaRHat) * rhohat_tree);
@@ -207,11 +192,16 @@ std::pair<double,double> CLASSNAME::calculate(double sinThetaW_start)
       iteration++;
    }
 
+   const double deltaRhoHat = calculate_delta_rho_hat(sinThetaW_new);
+
+   if (deltaRhoHat >= 1.0)
+      throw NonPerturbativeSinThetaW();
+
    if (not_converged)
       throw NoSinThetaWConvergenceError(number_of_iterations, sinThetaW_new);
 
    const double rhohat_ratio_final =
-      1.0 / (1.0 - calculate_delta_rho_hat(sinThetaW_new));
+      1.0 / (1.0 - deltaRhoHat);
    const double mw_pole =
       Sqrt(Sqr(mz) * rhohat_tree * rhohat_ratio_final * (1 - Sqr(sinThetaW_new)));
 
