re-introducing fudges for Delta_r and Delta_rho
to try as hard as we can to find a solution.

However, we now flag a warning/error when a fudge has been used.  In
this way we avoid silent convergence when the point is actually
non-perturbative.

Thanks to Peter for investigating.

--- a/templates/weinberg_angle.cpp.in
+++ b/templates/weinberg_angle.cpp.in
@@ -146,31 +146,41 @@ std::pair<double,double> CLASSNAME::calculate(double sinThetaW_start)
 
    int iteration = 0;
    bool not_converged = true;
+   bool fudged = false;
    double sinThetaW_old = sinThetaW_start;
    double sinThetaW_new = sinThetaW_start;
 
    while (not_converged && iteration < number_of_iterations) {
-      const double deltaRhoHat = calculate_delta_rho_hat(sinThetaW_old);
+      fudged = false;
 
-      if (!std::isfinite(deltaRhoHat) || deltaRhoHat >= 1.0)
-         throw NonPerturbativeSinThetaW();
+      double deltaRhoHat = calculate_delta_rho_hat(sinThetaW_old);
 
-      const double rhohat_ratio = Abs(deltaRhoHat) < 1.0 ?
-         1.0 / (1.0 - deltaRhoHat) : 1.0;
+      if (!std::isfinite(deltaRhoHat) || Abs(deltaRhoHat) >= 1.0) {
+         fudged = true;
+         deltaRhoHat = 0.;
+      }
 
-      const double deltaRHat = calculate_delta_r_hat(rhohat_ratio, sinThetaW_old);
+      const double rhohat_ratio = 1.0 / (1.0 - deltaRhoHat);
 
-      if (!std::isfinite(deltaRHat) || deltaRHat >= 1.0)
-         throw NonPerturbativeSinThetaW();
+      double deltaRHat = calculate_delta_r_hat(rhohat_ratio, sinThetaW_old);
+
+      if (!std::isfinite(deltaRHat) || Abs(deltaRHat) >= 1.0) {
+         fudged = true;
+         deltaRHat = 0.;
+      }
 
       double sin2thetasqO4 = Pi * alphaDRbar /
          (ROOT2 * Sqr(mz) * gfermi * (1.0 - deltaRHat) * rhohat_tree);
 
-      if (sin2thetasqO4 >= 0.25)
+      if (sin2thetasqO4 >= 0.25) {
+         fudged = true;
          sin2thetasqO4 = 0.25;
+      }
 
-      if (sin2thetasqO4 < 0.0)
+      if (sin2thetasqO4 < 0.0) {
+         fudged = true;
          sin2thetasqO4 = 0.0;
+      }
 
       const double sin2theta = Sqrt(4.0 * sin2thetasqO4);
       const double theta = 0.5 * ArcSin(sin2theta);
@@ -184,7 +194,8 @@ std::pair<double,double> CLASSNAME::calculate(double sinThetaW_start)
                   << " dRhoHat=" << deltaRhoHat
                   << " rhohat_ratio=" << rhohat_ratio
                   << " dRHat=" << deltaRHat
-                  << " sinThetaW_new=" << sinThetaW_new);
+                  << " sinThetaW_new=" << sinThetaW_new
+                  << " fudged = " << fudged);
 
       not_converged = precision >= precision_goal;
 
@@ -192,13 +203,16 @@ std::pair<double,double> CLASSNAME::calculate(double sinThetaW_start)
       iteration++;
    }
 
-   const double deltaRhoHat = calculate_delta_rho_hat(sinThetaW_new);
-
-   if (deltaRhoHat >= 1.0)
+   if (fudged)
       throw NonPerturbativeSinThetaW();
 
    if (not_converged)
       throw NoSinThetaWConvergenceError(number_of_iterations, sinThetaW_new);
+
+   const double deltaRhoHat = calculate_delta_rho_hat(sinThetaW_new);
+
+   if (Abs(deltaRhoHat) >= 1.0)
+      throw NonPerturbativeSinThetaW();
 
    const double rhohat_ratio_final =
       1.0 / (1.0 - deltaRhoHat);
