--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -42,10 +42,12 @@ using ChargedHiggsMultiplet = @FFMassiveVFormFactors_ChargedHiggsMultiplet@;
 static constexpr double oneOver32PiSquared = 1.0/(32.0*Pi*Pi);
 
 /**
- * @class MuEGammaVertexCorrectionSF
+ * @class MuEGammaVertexCorrectionFS
  * @brief A template that calculate contributions to the mu to e gamma
  *        of a given particle in a one loop diagram specified
  *        by a photon emitter and an exchange particle.
+ *        Warning! We assume that the vector doesn't change the species
+ *        of scalar or fermions.
  * @tparam Args Specifies in order the field of which to
  *              calculate the electric dipole moment,
  *              the photon emitter and the exchange particle
@@ -56,58 +58,18 @@ static constexpr double oneOver32PiSquared = 1.0/(32.0*Pi*Pi);
  * dipole moment of a one loop diagram with fields given by
  * \a Args.
  */
-template<class FermionIn, class FermionOut, class Spectator, class Emitter1, class Emitter2, class ExchangeParticle>
-struct FFMassiveVVertexCorrectionSSF {
+template<class FermionIn, class FermionOut, class Spectator, class Fermion, class Scalar>
+struct FFMassiveVVertexCorrectionFS {
    static std::valarray<std::complex<double>> value(
          const typename field_indices<FermionIn>::type& indices_in,
          const typename field_indices<FermionOut>::type& indices_out,
                        EvaluationContext& context);
 };
 
-/**
-* @class EDMVertexCorrectionFS
-* @brief A template that calculate contributions to the EDM
-*        of a given particle in a one loop diagram specified
-*        by a photon emitter and an exchange particle.
-* @tparam Args Specifies in order the field of which to
-*              calculate the electric dipole moment,
-*              the photon emitter and the exchange particle
-*              in a one-loop diagram where the photon emitter
-*              is a fermion and the exchange particle a scalar.
-*
-* This template evaluates the contribution to the electric
-* dipole moment of a one loop diagram with fields given by
-* \a Args.
-*/
-
-template<class FermionIn, class FermionOut, class Spectator, class Emitter1, class Emitter2, class ExchangeParticle>
-struct FFMassiveVVertexCorrectionFFS {
-   static std::valarray<std::complex<double>> value(
-         const typename field_indices<FermionIn>::type& indices_in,
-         const typename field_indices<FermionOut>::type& indices_out,
-                       EvaluationContext& context);
-};
 } // anonymous namespace
 
 namespace flexiblesusy {
 namespace @ModelName@_FFMassiveV_form_factors {
-
-   /*
-inline double sm_width(int generationIndex1,  int generationIndex2, const @ModelName@_mass_eigenstates& model ) {
-   @ModelName@_mass_eigenstates model_ = model;
-   EvaluationContext context{ model_ };
-   std::array<int, 1> indices1 = { generationIndex1 };
-   std::array<int, 1> indices2 = { generationIndex2 };
-
-   const auto leptonInMass = context.mass<Fe>(indices1);
-   const auto leptonOutMass = context.mass<Fe>(indices2);
-   const auto ratio = pow(leptonOutMass/leptonInMass,2);
-   const auto GF {1.1667e-5};
-   const double Alpha = Sqr(Fe::electric_charge * unit_charge(context))/(4*Pi);
-
-   return GF*GF * pow(leptonInMass,5) * (1.0 - 8.0*ratio ) * (1.0 + 0.5 * Alpha * (6.25-Sqr(Pi))/Pi)/(192.0*pow(Pi,3));
-}
-*/
 @FFMassiveVFormFactors_InterfaceDefinitions@
 }
 } // namespace flexiblesusy
@@ -149,16 +111,22 @@ default_indices_for_spectator<VP>( void )
 }
 
 template<>
+typename field_indices<VZ>::type
+default_indices_for_spectator<VZ>( void )
+{
+  return {};
+}
+
+template<>
 typename field_indices<VG>::type
 default_indices_for_spectator<VG>( void )
 {
   return {0};
 }
 
-// emit spectator from the internal scalar line
-template<class FermionIn, class FermionOut, class Spectator, class Emitter1, class Emitter2, class ExchangeField>
-std::valarray<std::complex<double>> FFMassiveVVertexCorrectionSSF<
-FermionIn, FermionOut, Spectator, Emitter1, Emitter2, ExchangeField
+template<class FermionIn, class FermionOut, class Spectator, class Fermion, class Scalar>
+std::valarray<std::complex<double>> FFMassiveVVertexCorrectionFS<
+FermionIn, FermionOut, Spectator, Fermion, Scalar
 >::value(
       const typename field_indices<FermionIn>::type& indices_in, 
       const typename field_indices<FermionOut>::type& indices_out, 
@@ -166,40 +134,90 @@ FermionIn, FermionOut, Spectator, Emitter1, Emitter2, ExchangeField
 {
    std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0};
 
-   using FermionVertexIn = Vertex<
+   using VertexFbarFinS = Vertex<
                          FermionIn,
-                         ExchangeField,
-                         typename Emitter1::lorentz_conjugate
+                         Scalar,
+                         typename Fermion::lorentz_conjugate
                          >;
-   using FermionVertexOut = Vertex<
+   using VertexFoutbarFSbar = Vertex<
                          typename FermionOut::lorentz_conjugate,
-                         typename ExchangeField::lorentz_conjugate,
-                         Emitter1
+                         typename Scalar::lorentz_conjugate,
+                         Fermion
                          >;
-   using FermionVertexEmit = Vertex<
+   using VertexSbarSVbar = Vertex<
                          typename Spectator::lorentz_conjugate,
-                         Emitter1,
-                         typename Emitter1::lorentz_conjugate
+                         Scalar,
+                         typename Scalar::lorentz_conjugate
+                         >;
+   using VertexFbarFVbar = Vertex<
+                         typename Spectator::lorentz_conjugate,
+                         Fermion,
+                         typename Fermion::lorentz_conjugate
+                         >;
+   using VertexFinbarFinVbar = Vertex<
+                         typename Spectator::lorentz_conjugate,
+                         FermionIn,
+                         typename FermionIn::lorentz_conjugate
+                         >;
+   using VertexFoutbarFoutVbar = Vertex<
+                         typename Spectator::lorentz_conjugate,
+                         FermionOut,
+                         typename FermionOut::lorentz_conjugate
                          >;
 
-   constexpr auto indexBoundsOut = FermionVertexOut::index_bounds;
-   constexpr auto indexBoundsIn = FermionVertexIn::index_bounds;
+   constexpr auto indexBoundsOut = VertexFoutbarFSbar::index_bounds;
+   constexpr auto indexBoundsIn = VertexFbarFinS::index_bounds;
 
    // loop over all possible particle "generations" attached to both vertices
    for (const auto& indexIn: indexBoundsIn) {
       for (const auto& indexOut: indexBoundsOut) {
 
          // cycle if generations of external fermions  are different then requested   
-         const auto edmFieldIndicesIn = FermionVertexIn::template fieldIndices<0>(indexIn);
-         const auto edmFieldIndicesOut = FermionVertexOut::template fieldIndices<0>(indexOut);
+         const auto edmFieldIndicesIn = VertexFbarFinS::template fieldIndices<0>(indexIn);
+         const auto edmFieldIndicesOut = VertexFoutbarFSbar::template fieldIndices<0>(indexOut);
          if (edmFieldIndicesIn != indices_in || edmFieldIndicesOut != indices_out)
             continue;
 
-         // match indices of the exchange field
-         const auto exchangeFieldIndicesIn = FermionVertexIn::template fieldIndices<1>(indexIn);
-         const auto exchangeFieldIndicesOut = FermionVertexOut::template fieldIndices<1>(indexOut);
-         if (exchangeFieldIndicesIn != exchangeFieldIndicesOut)
+         // match indices of the scalar field in the loop
+         const auto scalarFieldIndicesIn = VertexFbarFinS::template fieldIndices<1>(indexIn);
+         const auto scalarFieldIndicesOut = VertexFoutbarFSbar::template fieldIndices<1>(indexOut);
+         if (scalarFieldIndicesIn != scalarFieldIndicesOut)
             continue;
+
+         // match indices of the fermion field in the loop
+         const auto fermionFieldIndicesIn = VertexFbarFinS::template fieldIndices<2>(indexIn);
+         const auto fermionFieldIndicesOut = VertexFoutbarFSbar::template fieldIndices<2>(indexOut);
+         if (fermionFieldIndicesIn != fermionFieldIndicesOut)
+            continue;
+
+         // get me the FjbarFjV vertex   
+         auto spectator_indices = default_indices_for_spectator<Spectator>();
+         const auto indexFinbarFinVbar = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, edmFieldIndicesIn ), edmFieldIndicesIn );
+         const auto FjbarFjV = VertexFinbarFinVbar::evaluate(indexFinbarFinVbar, context);
+
+         // get me the FibarFiV vertex   
+         const auto indexFOutBarFOutVBar = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, edmFieldIndicesOut ), edmFieldIndicesOut );
+         const auto FibarFiV = VertexFinbarFinVbar::evaluate(indexFOutBarFOutVBar, context);
+
+         // get SbarSV vertex
+         const auto indexSBarSVBar = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, scalarFieldIndicesOut ), scalarFieldIndicesIn );
+         const auto SBarSVBar = VertexSbarSVbar::evaluate(indexSBarSVBar, context);
+
+         // get FBarFV vertex
+         const auto indexFBarFVBar = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, fermionFieldIndicesOut ), fermionFieldIndicesIn );
+         const auto FBarFVBar = VertexFbarFVbar::evaluate(indexFBarFVBar, context);
+
+         const auto fIn = context.mass<FermionIn>(fermionFieldIndicesIn);
+         const auto fOut = context.mass<FermionOut>(fermionFieldIndicesOut);
+
+         const auto mF = context.mass<Fermion>(fermionFieldIndicesIn);
+         const auto mS = context.mass<Scalar>(scalarFieldIndicesIn);
+         const auto x {pow(mF/mS,2)};
+
+         const std::complex<double> A1L = 0.;
+         const std::complex<double> A1R = 0.;
+         res += std::valarray<std::complex<double>> {A1L, A1R};
+/*
 
 
          const auto EmitterIndicesIn = FermionVertexIn::template fieldIndices<2>(indexIn);
@@ -217,135 +235,19 @@ FermionIn, FermionOut, Spectator, Emitter1, Emitter2, ExchangeField
          const auto vertexIn = FermionVertexIn::evaluate(indexIn, context);
          const auto vertexOut = FermionVertexOut::evaluate(indexOut, context);
 
-         auto spectator_indices = default_indices_for_spectator<Spectator>();
-         const auto indexEmit = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, EmitterIndicesIn ), EmitterIndicesIn );
-         const auto vertexEmit = FermionVertexEmit::evaluate(indexEmit, context);
-
-         const auto EmitterMass = context.mass<Emitter1>(EmitterIndicesIn);
-         const auto exchangeFieldMass = context.mass<ExchangeField>(exchangeFieldIndicesIn);
-         const auto x = pow(exchangeFieldMass/EmitterMass, 2);
-         const auto leptonMass = context.mass<FermionIn>(edmFieldIndicesIn);
 
          std::complex<double> EmitterCharge (vertexEmit.value());
 
          // eq. 15 of hep-ph/9510309
-         const std::complex<double> A1L =
             1./18. * vertexOut.right() * vertexIn.left() * G(x);
          // eq. 16 of hep-ph/9510309
          const std::complex<double> A2L = 
             vertexOut.left() * vertexIn.right() * G(x) 
             + vertexOut.left()* vertexIn.left() * exchangeFieldMass/leptonMass * G(x);
 
-         // eq. 15 & 16 of hep-ph/9510309 after replacement L <-> R
-         const std::complex<double> A1R = 
-            1./18. * vertexOut.left() * vertexIn.right() * G(x);
-         const std::complex<double> A2R = 
-            vertexOut.right() * vertexIn.left() * G(x) 
-            + vertexOut.right()* vertexIn.right() * exchangeFieldMass/leptonMass * G(x);
-
-         const std::complex<double> massFactor = pow(EmitterMass,-2);
-
-         res += oneOver32PiSquared * EmitterCharge * massFactor 
-            * std::valarray<std::complex<double>> {A1L, A1R, A2L, A2R};
+*/
       }
    }
-
-   return res;
-}
-
-// emit spectator from the internal fermion line
-template<class FermionIn, class FermionOut, class Spectator, class Emitter1, class Emitter2, class ExchangeField>
-std::valarray<std::complex<double>> FFMassiveVVertexCorrectionFFS<
-FermionIn, FermionOut, Spectator, Emitter1, Emitter2, ExchangeField
->::value(const typename field_indices<FermionIn>::type& indices_in, 
-      const typename field_indices<FermionOut>::type& indices_out,
-      EvaluationContext& context)
-{
-   std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0};
-
-   using FermionVertexIn = Vertex<
-                         FermionIn,
-                         ExchangeField,
-                         typename Emitter1::lorentz_conjugate
-                         >;
-   using FermionVertexOut = Vertex<
-                         typename FermionOut::lorentz_conjugate,
-                         typename ExchangeField::lorentz_conjugate,
-                         Emitter1
-                         >;
-   using FermionVertexEmit = Vertex<
-                         typename Spectator::lorentz_conjugate,
-                         Emitter1,
-                         typename Emitter1::lorentz_conjugate
-                         >;
-   
-   constexpr auto indexBoundsOut = FermionVertexOut::index_bounds;
-   constexpr auto indexBoundsIn = FermionVertexIn::index_bounds;
-
-   // loop over all possible particle "generations" attached to both vertices
-   for (const auto& indexIn: indexBoundsIn) {
-      for (const auto& indexOut: indexBoundsOut) {
-
-         // cycle if generations of external fermions are different then requested   
-         const auto edmFieldIndicesIn = FermionVertexIn::template fieldIndices<0>(indexIn);
-         const auto edmFieldIndicesOut = FermionVertexOut::template fieldIndices<0>(indexOut);
-         if (edmFieldIndicesIn != indices_in || edmFieldIndicesOut != indices_out)
-            continue;
-
-         // match indices of the exchange field
-         const auto exchangeFieldIndicesIn = FermionVertexIn::template fieldIndices<1>(indexIn);
-         const auto exchangeFieldIndicesOut = FermionVertexOut::template fieldIndices<1>(indexOut);
-         if (exchangeFieldIndicesIn != exchangeFieldIndicesOut )
-            continue;
-
-         const auto EmitterIndicesIn = FermionVertexIn::template fieldIndices<2>(indexIn);
-         const auto EmitterIndicesOut = FermionVertexOut::template fieldIndices<2>(indexOut);
-         if (EmitterIndicesIn != EmitterIndicesOut) continue;
-
-         // Throw out SM Goldstone, it could crash if SM is used.
-         if ( std::is_same<ExchangeField, ChargedHiggsMultiplet>::type::value || 
-                 std::is_same<ExchangeField, typename ChargedHiggsMultiplet::lorentz_conjugate>::type::value )
-         {
-            if ( exchangeFieldIndicesIn[0] == 0 )
-                continue;
-         }
-
-         const auto vertexIn = FermionVertexIn::evaluate(indexIn, context);
-         const auto vertexOut = FermionVertexOut::evaluate(indexOut, context);
-         
-         auto spectator_indices = default_indices_for_spectator<Spectator>();
-         const auto indexEmit = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, EmitterIndicesIn ), EmitterIndicesIn );
-         const auto vertexEmit = FermionVertexEmit::evaluate(indexEmit, context);
-
-         const auto EmitterMass = context.mass<Emitter1>(EmitterIndicesIn);
-         const auto exchangeFieldMass = context.mass<ExchangeField>(exchangeFieldIndicesIn);
-         const auto x = pow(EmitterMass/exchangeFieldMass, 2);
-         const auto leptonMass = context.mass<FermionIn>(edmFieldIndicesIn);
-
-         // Assuming left and right couplings are the same. Doesn't work for the Z boson.
-         std::complex<double> EmitterCharge (vertexEmit.left());
-
-         // eq. 18 of hep-ph/9510309
-         const std::complex<double> A1L =
-            1./18. * vertexOut.right() * vertexIn.left() * G(x);
-         // eq. 19 of hep-ph/9510309
-         const std::complex<double> A2L = 
-            vertexOut.left() * vertexIn.right() * G(x) 
-            + vertexOut.left()* vertexIn.left() * EmitterMass/leptonMass * G(x);
-
-         // eq. 18 & 18 of hep-ph/9510309 after replacement L <-> R
-         const std::complex<double> A1R = 
-            1./18. * vertexOut.left() * vertexIn.right() * G(x);
-         const std::complex<double> A2R = 
-            vertexOut.right() * vertexIn.left() * G(x) 
-            + vertexOut.right()* vertexIn.right() * EmitterMass/leptonMass * G(x);
-         const std::complex<double> massFactor = pow(exchangeFieldMass,-2);
-
-         res -= oneOver32PiSquared * EmitterCharge * massFactor 
-            * std::valarray<std::complex<double>> {A1L, A1R, A2L, A2R};
-      }
-   }
-
    return res;
 }
 
