--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -156,13 +156,16 @@ Fj, Fi, V, F, S
    
    std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0};
    
-   // @TODO: if vector couples directly to the incoming and outgoing fermion we need to do sth else
    if(is_zero(abs(FiBarFjVBar.left())) &&  is_zero(abs(FiBarFjVBar.right()))) {
-      res = FFVEmitterFj<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
+      res += FFVEmitterFj<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
       res += FFVEmitterFi<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
       res += FFVEmitterF<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
       res += FFVEmitterS<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
    } 
+   // @TODO: if vector couples directly to the incoming and outgoing fermion we need to do sth else
+   else {
+      BOOST_ASSERT_MSG(is_zero(abs(FiBarFjVBar.left())) &&  is_zero(abs(FiBarFjVBar.right())), "We don't handle this case");
+   }
 
 /*
 
@@ -474,6 +477,8 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto FiBarFSBar = VertexFiBarFSBar::evaluate(indexOut, context);
          const auto FiBarFSL = FiBarFSBar.left();
          const auto FiBarFSR = FiBarFSBar.right();
+
+         // @todo: for now set to 0
          const std::complex<double> A1Lq2div = 0.;
          const std::complex<double> A1Rq2div = 0.;
          const std::complex<double> A1Lq2fin = 0.;
@@ -481,23 +486,14 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
 
          const std::complex<double> A1Lq0div = -(FBarFjSBarL*FBarFVBarR*FiBarFSR)/(32.*Power(Pi,2));
          const std::complex<double> A1Rq0div = -(FBarFjSBarR*FBarFVBarL*FiBarFSL)/(32.*Power(Pi,2));
-         const std::complex<double> A1Lq0fin = (FiBarFSR*(-9*Power(mS,2)*Power(-1 + x,2)*((1 - x)*
-           (-2*FBarFjSBarR*FBarFVBarL*mj*Sqrt(x)*(1 + x) + 
-             FBarFjSBarL*mS*(-1 + x)*(FBarFVBarR - 4*FBarFVBarL*x + FBarFVBarR*x)) + 
-          2*(-2*FBarFjSBarR*FBarFVBarL*mj*Power(x,1.5) + FBarFjSBarL*mS*(-1 + x)*(FBarFVBarR - 2*FBarFVBarL*x))*Log(x)) - 
-       LDot(q,q)*((-1 + x)*(FBarFjSBarR*FBarFVBarL*mj*Sqrt(x)*(-17 + (-8 + x)*x) + 
-             FBarFjSBarL*mS*(-1 + x)*(3*FBarFVBarL*(-2 + (-5 + x)*x) + 2*FBarFVBarR*(11 + x*(-7 + 2*x)))) + 
-          6*(FBarFjSBarR*FBarFVBarL*mj*Sqrt(x)*(1 + 3*x) + FBarFjSBarL*mS*(-1 + x)*(-2*FBarFVBarR + 3*FBarFVBarL*x))*Log(x))))
-    /(576.*Power(mS,3)*Power(Pi,2)*Power(-1 + x,5));
-         const std::complex<double> A1Rq0fin = (FiBarFSL*(-9*Power(mS,2)*Power(-1 + x,2)*((1 - x)*
-           (-2*FBarFjSBarL*FBarFVBarR*mj*Sqrt(x)*(1 + x) + 
-             FBarFjSBarR*mS*(-1 + x)*(FBarFVBarL + FBarFVBarL*x - 4*FBarFVBarR*x)) + 
-          2*(-2*FBarFjSBarL*FBarFVBarR*mj*Power(x,1.5) + FBarFjSBarR*mS*(-1 + x)*(FBarFVBarL - 2*FBarFVBarR*x))*Log(x)) - 
-       LDot(q,q)*((-1 + x)*(FBarFjSBarL*FBarFVBarR*mj*Sqrt(x)*(-17 + (-8 + x)*x) + 
-             FBarFjSBarR*mS*(-1 + x)*(3*FBarFVBarR*(-2 + (-5 + x)*x) + 2*FBarFVBarL*(11 + x*(-7 + 2*x)))) + 
-          6*(FBarFjSBarL*FBarFVBarR*mj*Sqrt(x)*(1 + 3*x) + FBarFjSBarR*mS*(-1 + x)*(-2*FBarFVBarL + 3*FBarFVBarR*x))*Log(x))))
-    /(576.*Power(mS,3)*Power(Pi,2)*Power(-1 + x,5));
-
+         const std::complex<double> A1Lq0fin = (FiBarFSR*((-1 + x)*(-2*FBarFjSBarR*FBarFVBarL*mj*Sqrt(x)*(1 + x) + 
+          FBarFjSBarL*mS*(-1 + x)*(FBarFVBarR - 4*FBarFVBarL*x + FBarFVBarR*x)) + 
+       2*(2*FBarFjSBarR*FBarFVBarL*mj*Power(x,1.5) + FBarFjSBarL*mS*(-1 + x)*(-FBarFVBarR + 2*FBarFVBarL*x))*Log(x)))/
+   (64.*mS*Power(Pi,2)*Power(-1 + x,3));
+        const std::complex<double> A1Rq0fin = (FiBarFSL*((-1 + x)*(-2*FBarFjSBarL*FBarFVBarR*mj*Sqrt(x)*(1 + x) + 
+          FBarFjSBarR*mS*(-1 + x)*(FBarFVBarL + FBarFVBarL*x - 4*FBarFVBarR*x)) + 
+       2*(2*FBarFjSBarL*FBarFVBarR*mj*Power(x,1.5) + FBarFjSBarR*mS*(-1 + x)*(-FBarFVBarL + 2*FBarFVBarR*x))*Log(x)))/
+   (64.*mS*Power(Pi,2)*Power(-1 + x,3));
          res += std::complex<double>(0.,-1.) * std::valarray<std::complex<double>> {
             // order q^0 of charge radius
             A1Lq0div, A1Lq0fin, A1Rq0div, A1Rq0fin, 
@@ -527,6 +523,53 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
    constexpr auto indexBoundsIn = VertexFBarFjS::index_bounds;
    for (const auto& indexIn: indexBoundsIn) {
       for (const auto& indexOut: indexBoundsOut) {
+         // cycle if generations of external fermions  are different then requested   
+         const auto jFieldIndices = VertexFBarFjS::template fieldIndices<1>(indexIn);
+         const auto iFieldIndices = VertexFiBarFSBar::template fieldIndices<0>(indexOut);
+         if (jFieldIndices != indices_in || iFieldIndices != indices_out)
+            continue;
+
+         // match indices of the fermion field in the loop
+         const auto fermionFieldIndicesIn = VertexFBarFjS::template fieldIndices<0>(indexIn);
+         const auto fermionFieldIndicesOut = VertexFiBarFSBar::template fieldIndices<1>(indexOut);
+         if (fermionFieldIndicesIn != fermionFieldIndicesOut)
+            continue;
+
+         // get SBarSVBar vertex
+         const auto scalarFieldIndicesIn = VertexFBarFjS::template fieldIndices<2>(indexIn);
+         const auto scalarFieldIndicesOut = VertexFiBarFSBar::template fieldIndices<2>(indexOut);
+         const auto indexSBarSVBar = flexiblesusy::cxx_diagrams::impl::concatenate(scalarFieldIndicesOut, 
+            flexiblesusy::cxx_diagrams::impl::concatenate( scalarFieldIndicesIn, spectator_indices));
+         const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context);
+
+         const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         const auto x {pow(mF/mS,2)};
+
+         const auto FBarFjSBar = VertexFBarFjS::evaluate(indexIn, context);
+         const auto FBarFjSBarL = FBarFjSBar.left();
+         const auto FBarFjSBarR = FBarFjSBar.right();
+
+         const auto FiBarFSBar = VertexFiBarFSBar::evaluate(indexOut, context);
+         const auto FiBarFSL = FiBarFSBar.left();
+         const auto FiBarFSR = FiBarFSBar.right();
+
+         // @todo: for now set to 0
+         const std::complex<double> A1Lq2div = 0.;
+         const std::complex<double> A1Rq2div = 0.;
+         const std::complex<double> A1Lq2fin = 0.;
+         const std::complex<double> A1Rq2fin = 0.;
+
+         const std::complex<double> A1Lq0div = 0.;
+         const std::complex<double> A1Rq0div = 0.;
+         const std::complex<double> A1Lq0fin = 0.;
+        const std::complex<double> A1Rq0fin = 0.;
+
+         res += std::complex<double>(0.,-1.) * std::valarray<std::complex<double>> {
+            // order q^0 of charge radius
+            A1Lq0div, A1Lq0fin, A1Rq0div, A1Rq0fin, 
+            A1Lq2div, A1Lq2fin, A1Rq2div, A1Rq2fin
+         };
       }
    }
    return res;
