--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -147,89 +147,21 @@ std::valarray<std::complex<double>> FFMassiveVVertexCorrectionFS<Fj, Fi, V, F, S
 
    using VertexFiBarFjVBar = Vertex<typename Fi::lorentz_conjugate, Fj, typename V::lorentz_conjugate>;
    
-         auto spectator_indices = default_indices_for_spectator<V>();
-         const auto indexFiBarFjVBar = flexiblesusy::cxx_diagrams::impl::concatenate( 
-            flexiblesusy::cxx_diagrams::impl::concatenate( indices_out, indices_in), 
-             spectator_indices);
-         const auto FiBarFjVBar = VertexFiBarFjVBar::evaluate(indexFiBarFjVBar, context);
+   auto spectator_indices = default_indices_for_spectator<V>();
+   const auto indexFiBarFjVBar = flexiblesusy::cxx_diagrams::impl::concatenate( 
+      flexiblesusy::cxx_diagrams::impl::concatenate( indices_out, indices_in), 
+      spectator_indices);
+   const auto FiBarFjVBar = VertexFiBarFjVBar::evaluate(indexFiBarFjVBar, context);
    
    std::valarray<std::complex<double>> res {0.0, 0.0};
    
-   setmudim(1000.);
-   if(is_zero(abs(FiBarFjVBar.left())) &&  is_zero(abs(FiBarFjVBar.right()))) {
+   //if(is_zero(abs(FiBarFjVBar.left())) &&  is_zero(abs(FiBarFjVBar.right()))) {
       res += FFVEmitterFj<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
       res += FFVEmitterFi<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
       res += FFVEmitterF<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
       res += FFVEmitterS<Fj, Fi, V, F, S>::value(indices_in, indices_out, context);   
-   } 
-   for (const auto el : res) 
-   std::cout << el << ' ';
-   std::cout << std::endl;
-   // else {
-   // @TODO: if vector couples directly to the incoming and outgoing fermion we need to do sth else
-      // BOOST_ASSERT_MSG(is_zero(abs(FiBarFjVBar.left())) &&  is_zero(abs(FiBarFjVBar.right())), "We don't handle this case");
-   // }
+   //} 
 
-/*
-
-   for (const auto& indexIn: indexBoundsIn) {
-      for (const auto& indexOut: indexBoundsOut) {
-
-         // cycle if generations of external fermions  are different then requested   
-         const auto edmFieldIndicesIn = VertexFbarFinS::template fieldIndices<0>(indexIn);
-         const auto edmFieldIndicesOut = VertexFoutbarFSbar::template fieldIndices<0>(indexOut);
-         if (edmFieldIndicesIn != indices_in || edmFieldIndicesOut != indices_out)
-            continue;
-
-         // match indices of the scalar field in the loop
-         const auto scalarFieldIndicesIn = VertexFbarFinS::template fieldIndices<1>(indexIn);
-         const auto scalarFieldIndicesOut = VertexFoutbarFSbar::template fieldIndices<1>(indexOut);
-         if (scalarFieldIndicesIn != scalarFieldIndicesOut)
-            continue;
-
-         // match indices of the fermion field in the loop
-         const auto fermionFieldIndicesIn = VertexFbarFinS::template fieldIndices<2>(indexIn);
-         const auto fermionFieldIndicesOut = VertexFoutbarFSbar::template fieldIndices<2>(indexOut);
-         if (fermionFieldIndicesIn != fermionFieldIndicesOut)
-            continue;
-
-         // get me the FjbarFjV vertex   
-         auto spectator_indices = default_indices_for_spectator<V>();
-         const auto indexFinbarFinVbar = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, edmFieldIndicesIn ), edmFieldIndicesIn );
-         const auto FjbarFjV = VertexFinbarFinVbar::evaluate(indexFinbarFinVbar, context);
-
-         // get me the FibarFiV vertex   
-         const auto indexFOutBarFOutVBar = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, edmFieldIndicesOut ), edmFieldIndicesOut );
-         const auto FibarFiV = VertexFinbarFinVbar::evaluate(indexFOutBarFOutVBar, context);
-
-         // get SbarSV vertex
-         const auto indexSBarSVBar = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, scalarFieldIndicesOut ), scalarFieldIndicesIn );
-         const auto SBarSVBar = VertexSbarSVbar::evaluate(indexSBarSVBar, context);
-
-         const auto mfIn = context.mass<Fj>(edmFieldIndicesIn);
-         const auto mfOut = context.mass<FermionOut>(edmFieldIndicesOut);
-
-         const auto mF = context.mass<F>(fermionFieldIndicesIn);
-         const auto mS = context.mass<S>(scalarFieldIndicesIn);
-         const auto x {pow(mF/mS,2)};
-
-         const std::complex<double> A1L = 0.;
-         const std::complex<double> A1R = 0.;
-         res += std::valarray<std::complex<double>> {A1L, A1R};
-
-
-         const auto EmitterIndicesIn = FermionVertexIn::template fieldIndices<2>(indexIn);
-         const auto EmitterIndicesOut = FermionVertexOut::template fieldIndices<2>(indexOut);
-         if (EmitterIndicesIn != EmitterIndicesOut) continue;
-
-         // Throw out SM Goldstone, it could crash if SM is used.
-         if ( std::is_same<Emitter1, ChargedHiggsMultiplet>::type::value || 
-                 std::is_same<Emitter1, typename ChargedHiggsMultiplet::lorentz_conjugate>::type::value )
-         {
-            if ( EmitterIndicesIn[0] == 0 )
-                continue;
-         }
-*/
    return res;
 }
 
@@ -284,7 +216,6 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
 
          const auto mF = context.mass<F>(fermionFieldIndicesIn);
          const auto mS = context.mass<S>(scalarFieldIndicesIn);
-         const auto x {pow(mF/mS,2)};
 
          const auto FBarFjSBar = VertexFbarFjS::evaluate(indexIn, context);
          const auto FBarFjSBarL = FBarFjSBar.left();
@@ -293,15 +224,6 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
          const auto FiBarFSBar = VertexFibarFSbar::evaluate(indexOut, context);
          const auto FiBarFSL = FiBarFSBar.left();
          const auto FiBarFSR = FiBarFSBar.right();
-         
-
-         // there seem to not be any q^2 terms
-         const std::complex<double> A1Lq2div = 0.;
-         const std::complex<double> A1Rq2div = 0.;
-         const std::complex<double> A1Lq2fin = 0.;
-         const std::complex<double> A1Rq2fin = 0.;
-
-         // q^0 terms
          
          const std::complex<double> A1L = 
          (-((FBarFjSBarL*FiBarFSR*FjBarFjVBarL*A0i(aa0,Power(mF,2)))/(Power(mi,2) - Power(mj,2))) + 
@@ -320,7 +242,8 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
      (mj*((-2*FBarFjSBarR*FiBarFSL*FjBarFjVBarR*mi*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/
            (Power(mi,2) - Power(mj,2)) + (2*FBarFjSBarL*FiBarFSR*FjBarFjVBarR*mj*
              B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2))))/2.)/(16.*Power(Pi,2));
-         const std::complex<double> A1R = (-((FBarFjSBarR*FiBarFSL*FjBarFjVBarR*A0i(aa0,Power(mF,2)))/(Power(mi,2) - Power(mj,2))) + 
+         const std::complex<double> A1R = 
+(-((FBarFjSBarR*FiBarFSL*FjBarFjVBarR*A0i(aa0,Power(mF,2)))/(Power(mi,2) - Power(mj,2))) + 
      (FBarFjSBarR*FiBarFSL*FjBarFjVBarR*A0i(aa0,Power(mS,2)))/(Power(mi,2) - Power(mj,2)) + 
      (FBarFjSBarR*FiBarFSL*FjBarFjVBarR*Power(mF,2)*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
       (Power(mi,2) - Power(mj,2)) + (FBarFjSBarR*FiBarFSR*FjBarFjVBarR*mF*mi*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
@@ -337,9 +260,7 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
            (Power(mi,2) - Power(mj,2)) + (2*FBarFjSBarL*FiBarFSR*FjBarFjVBarR*mj*
              B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2))))/2.)/(16.*Power(Pi,2));
          
-         res -= std::valarray<std::complex<double>> {
-            A1L, A1R
-         };
+         res -= std::valarray<std::complex<double>> {A1L, A1R};
       }
    }
 
@@ -420,20 +341,18 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
         (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*mj*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2))))/
    (16.*Power(Pi,2));
          const std::complex<double> A1R = 
-         (-((FBarFjSBarR*FiBarFiVBarR*FiBarFSL*A0i(aa0,Power(mF,2)))/(-Power(mi,2) + Power(mj,2))) + 
-     (FBarFjSBarR*FiBarFiVBarR*FiBarFSL*A0i(aa0,Power(mS,2)))/(-Power(mi,2) + Power(mj,2)) + 
-     (FBarFjSBarR*FiBarFiVBarR*FiBarFSL*Power(mF,2)*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarR*FiBarFiVBarR*FiBarFSR*mF*mi*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarL*FiBarFiVBarR*FiBarFSL*mF*mj*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarL*FiBarFiVBarR*FiBarFSR*mi*mj*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) - (FBarFjSBarR*FiBarFiVBarR*FiBarFSL*Power(mS,2)*
+(-((FBarFjSBarL*FiBarFiVBarL*FiBarFSR*A0i(aa0,Power(mF,2)))/(-Power(mi,2) + Power(mj,2))) + 
+     (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*A0i(aa0,Power(mS,2)))/(-Power(mi,2) + Power(mj,2)) + 
+     (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*Power(mF,2)*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
+      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarL*FiBarFiVBarL*FiBarFSL*mF*mi*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
+      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarR*FiBarFiVBarL*FiBarFSR*mF*mj*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
+      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarR*FiBarFiVBarL*FiBarFSL*mi*mj*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
+      (-Power(mi,2) + Power(mj,2)) - (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*Power(mS,2)*
         B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2)) + 
-     mj*((FBarFjSBarL*FiBarFiVBarR*FiBarFSR*mi*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2)) - 
-        (FBarFjSBarR*FiBarFiVBarR*FiBarFSL*mj*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2))))/
+     mj*((FBarFjSBarR*FiBarFiVBarL*FiBarFSL*mi*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2)) - 
+        (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*mj*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2))))/
    (16.*Power(Pi,2));
-         res -= std::valarray<std::complex<double>> {
-            A1L, A1R
-         };
+         res -= std::valarray<std::complex<double>> {A1L, A1R};
       }
    }
    return res;
@@ -498,7 +417,8 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFSBar.right();
 
          // @todo: for now set to 0
-         const std::complex<double> A1L = (-(FBarFjSBarL*FBarFVBarR*FiBarFSR*B0i(bb0,0,Power(mFA,2),Power(mFB,2))) + 
+         const std::complex<double> A1L = 
+(-(FBarFjSBarL*FBarFVBarR*FiBarFSR*B0i(bb0,0,Power(mFA,2),Power(mFB,2))) + 
      FBarFjSBarL*FBarFVBarL*FiBarFSR*mFA*mFB*C0i(cc0,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)) + 
      FBarFjSBarL*FBarFVBarL*FiBarFSL*mFB*mi*C0i(cc0,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)) + 
      FBarFjSBarR*FBarFVBarL*FiBarFSR*mFA*mj*C0i(cc0,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)) + 
@@ -530,7 +450,8 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
       + FBarFjSBarR*FBarFVBarL*FiBarFSL*mi*mj*C0i(cc22,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)) + 
      FBarFjSBarL*FBarFVBarR*FiBarFSR*Power(mj,2)*C0i(cc22,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)))/
    (16.*Power(Pi,2));
-        const std::complex<double> A1R = (-(FBarFjSBarR*FBarFVBarL*FiBarFSL*B0i(bb0,0,Power(mFA,2),Power(mFB,2))) + 
+        const std::complex<double> A1R = 
+(-(FBarFjSBarR*FBarFVBarL*FiBarFSL*B0i(bb0,0,Power(mFA,2),Power(mFB,2))) + 
      FBarFjSBarR*FBarFVBarR*FiBarFSL*mFA*mFB*C0i(cc0,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)) + 
      FBarFjSBarR*FBarFVBarR*FiBarFSR*mFB*mi*C0i(cc0,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)) + 
      FBarFjSBarL*FBarFVBarR*FiBarFSL*mFA*mj*C0i(cc0,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)) + 
@@ -562,9 +483,8 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
       + FBarFjSBarL*FBarFVBarR*FiBarFSR*mi*mj*C0i(cc22,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)) + 
      FBarFjSBarR*FBarFVBarL*FiBarFSL*Power(mj,2)*C0i(cc22,Power(mi,2),0,Power(mj,2),Power(mS,2),Power(mFA,2),Power(mFB,2)))/
    (16.*Power(Pi,2));
-         res -= std::valarray<std::complex<double>> {
-            A1L, A1R
-         };
+
+         res -= std::valarray<std::complex<double>> {A1L, A1R};
       }
    }
    return res;
@@ -624,8 +544,8 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          const auto FiBarFSL = FiBarFSBar.left();
          const auto FiBarFSR = FiBarFSBar.right();
 
-         // @todo: for now set to 0
-         const std::complex<double> A1L = (-2*FBarFjSBarL*FiBarFSR*SBarSVBar*C0i(cc00,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
+         const std::complex<double> A1L = 
+(-2*FBarFjSBarL*FiBarFSR*SBarSVBar*C0i(cc00,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
      (mi*(FBarFjSBarL*FiBarFSL*mF*SBarSVBar*C0i(cc0,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
           FBarFjSBarR*FiBarFSL*mj*SBarSVBar*C0i(cc0,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
           2*FBarFjSBarL*FiBarFSL*mF*SBarSVBar*C0i(cc1,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
@@ -677,7 +597,8 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
           FBarFjSBarL*FiBarFSR*SBarSVBar*C0i(cc2,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) - 
           2*FBarFjSBarL*FiBarFSR*SBarSVBar*C0i(cc22,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2))))/2.)/
    (16.*Power(Pi,2));
-         const std::complex<double> A1R = (-2*FBarFjSBarR*FiBarFSL*SBarSVBar*C0i(cc00,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
+         const std::complex<double> A1R = 
+(-2*FBarFjSBarR*FiBarFSL*SBarSVBar*C0i(cc00,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
      (mj*(FBarFjSBarL*FiBarFSL*mF*SBarSVBar*C0i(cc0,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
           FBarFjSBarR*FiBarFSL*mj*SBarSVBar*C0i(cc0,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
           2*FBarFjSBarL*FiBarFSL*mF*SBarSVBar*C0i(cc1,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) + 
@@ -729,10 +650,7 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
           FBarFjSBarL*FiBarFSR*SBarSVBar*C0i(cc2,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2)) - 
           2*FBarFjSBarL*FiBarFSR*SBarSVBar*C0i(cc22,0,Power(mi,2),Power(mj,2),Power(mSB,2),Power(mSA,2),Power(mF,2))))/2.)/
    (16.*Power(Pi,2));
-
-         res -= std::valarray<std::complex<double>> {
-            A1L, A1R
-         };
+         res -= std::valarray<std::complex<double>> {A1L, A1R};
       }
    }
    return res;
