compatibility fix for Himalaya 2.0

--- a/model_files/HSSUSY/FlexibleSUSY.m.in
+++ b/model_files/HSSUSY/FlexibleSUSY.m.in
@@ -233,22 +233,28 @@ Get[FileNameJoin[{Directory[], "meta", "SM", "HSSUSY_scale_variation.m"}]];
 
 FSHimalayaInput = {
     RenormalizationScheme -> MSbar,
+    Lambda3LEFT -> ThreeLoopAtAsAsEFT,
+    Lambda3LH3m -> ThreeLoopAtAsAsH3m,
+    Lambda3LUncertainty -> DeltaLambda3L,
     \[Mu] -> MuInput,
-    g3 -> SARAH`strongCoupling,
+    g1 -> g1,
+    g2 -> g2,
+    g3 -> g3,
     vu -> v Sin[ArcTan[TanBeta]],
     vd -> v Cos[ArcTan[TanBeta]],
     MSQ2 -> msq2,
     MSD2 -> msd2,
     MSU2 -> msu2,
-    At -> AtInput,
-    Ab -> AbInput,
-    mG -> M3Input,
-    mW -> FlexibleSUSY`M[SARAH`VectorW],
-    mZ -> FlexibleSUSY`M[SARAH`VectorZ],
-    mt -> FlexibleSUSY`M[SARAH`TopQuark[3]],
-    mb -> FlexibleSUSY`M[SARAH`BottomQuark[3]],
-    mA -> mAInput,
-    Lambda3LEFT -> ThreeLoopAtAsAsEFT,
-    Lambda3LH3m -> ThreeLoopAtAsAsH3m,
-    Lambda3LUncertainty -> DeltaLambda3L
+    MSL2 -> msl2,
+    MSE2 -> mse2,
+    Au -> AtInput,
+    Ad -> AbInput,
+    Ae -> AtauInput,
+    Yu -> Yu,
+    Yd -> Yd,
+    Ye -> Ye,
+    M1 -> M1Input,
+    M2 -> M2Input,
+    M3 -> M3Input,
+    mA -> mAInput
 };
